--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "beyondcode/laravel-websockets": "^1.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
+        "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
